export interface BuscadorParam {
    titulo?:string;
    fecha?:Date;
}