export interface Marcador {
    getNombre():string
}